<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact1">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/listItem1"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Item2Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/listItem1Address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/contactName"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

    <TextView
        android:id="@+id/Item1Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listItem1Phone"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/Item2Address"
        app:layout_constraintTop_toBottomOf="@+id/Item2Address" />

    <TextView
        android:id="@+id/Item1Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listItem1Email"
        app:layout_constraintStart_toStartOf="@+id/Item1Phone"
        app:layout_constraintTop_toBottomOf="@+id/Item1Phone" />

    <Button
        android:id="@+id/btnBack1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnBack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>