<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/listItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listItem1"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDetails1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/listItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/listItem2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDetails2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDetails1" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="19dp"
        android:text="@string/txtTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/listItem1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDetails1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="9dp"
        android:text="@string/btnDetails"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/listItem2"
        app:layout_constraintStart_toStartOf="@+id/listItem1"
        app:layout_constraintTop_toBottomOf="@+id/listItem1" />

    <Button
        android:id="@+id/btnDetails2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="570dp"
        android:text="@string/btnDetails"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/listItem2"
        app:layout_constraintTop_toBottomOf="@+id/listItem2" />
</androidx.constraintlayout.widget.ConstraintLayout>